# murphysig

./: .gitignore  .murphysig  CLAUDE.md  LICENSE  MURPHYSIG_WHITEPAPER-v0.0.1.md  MURPHYSIG_WHITEPAPER-v0.0.2.md  MURPHYSIG_WHITEPAPER-v0.0.4.md  README.md  REVIEW-GEMINI-1.md  REVIEW-GPT5-1.md  REVIEW-SONNET-1.md  SPEC-v0.5-DIRECTION.md  murphysig.claude.md  netlify.toml
benchmark/: .gitignore  README.md  pyproject.toml
benchmark/fixtures/: cases.yaml  judge_prompt.txt  review_prompt.txt
benchmark/results/: NARRATIVE_v2a_20260418.md  report_20260418_2304.md  report_heuristic_20260218_0815.md  unified_report_20260419_1135.md
benchmark/scripts/: _honesty_gpt_judge.sh  _tk_gpt_judge.sh  _tk_prose_add.sh  _tk_prose_gpt.sh  _tk_sweep.sh  archive_run.py  archive_tk_run.py  author_report.py  cross_family_report.py  honesty_judge_agreement.py  providers.py  rescore_author_judge.py  rescore_openai_judge.py  rescore_tk_judge.py  rescore_tk_perquestion.py  run_author_openai.py  run_honesty_openai.py  run_tk_openai.py  tk_cross_family_report.py  tk_judge_agreement.py
benchmark/src/: __main__.py  analyze.py  heuristic_scorer.py  loader.py  models.py  reasoning.py  reporter.py  resume.py  runner.py  scorer.py  signature.py  unified_reporter.py
benchmark/tests/: conftest.py  test_archive_run.py  test_archive_tk_run.py  test_author_judge.py  test_author_report.py  test_cross_family_report.py  test_honesty_judge_agreement.py  test_honesty_loader.py  test_honesty_models.py  test_honesty_scorer.py  test_loader.py  test_models.py  test_provider_runner.py  test_providers.py  (+14 more)
(+1363 files in other folders)
